# sonar

./: .dir-locals.el  .gitignore  .travis.yml  .zenodo.json  CITATION.cff  Cargo.toml  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  build.rs  citation-version.py  clang-format.txt  configure  example_config.conf  example_mapping.tsv  pyproject.toml  pytest.ini  requirements.txt  roadmap.md  setup.py  sonar.spec
.github/workflows/: test-generated-doc.yml  test-go-format.yml  test-minimal.yml  test-rust-format.yml  test.yml
build-dist/: Makefile  README.md  setuptree.bash  sonar-allgpu.spec  sonar-node-binary.spec  sonar-node-fakegpu.spec  sonar-node-nvidia.spec  sonar-nvidia.spec  version.go
build-dist/assets/: README  sonar-fakegpu-node.cfg
build-dist/rpm-assets/: sonar.cfg  sonar.service
doc/: CHANGELOG.md  DATA-FORMAT.md  DESIGN.md  HISTORICAL.md  HOWTO-DAEMON.md  HOWTO-DEPLOY.md  HOWTO-DEVELOP.md  HOWTO-HTTP.md  HOWTO-KAFKA.md  MANUAL.md  NEW-FORMAT.md  OLD-FORMAT.md  README.md  VERSIONING.md  contributing.md  design-decisions.md  design-decisions.rst  design.md  roadmap.md  roadmap.rst  types.spec.yaml  usage.md
example/: mapping_re.tsv  mapping_re.txt  mapping_str.tsv  mapping_str.txt  old_mapping  system-vm-deploy.cfg  user-vm-deploy.cfg
example-mapping/: regex_map.txt  string_map.txt
gpuapi/: .gitignore  Makefile  README.md  amd-shell.c  build-ex3-habana-x86_64.bash  build-ex3-nvidia-aarch64.bash  build-ex3-xpu-x86_64.bash  build-linux-fakegpu-x86_64.bash  build-uio-amd-aarch64.bash  build-uio-amd-x86_64.bash  build-uio-habana-aarch64.bash  build-uio-nvidia-aarch64.bash  build-uio-nvidia-x86_64.bash  build-uio-xpu-aarch64.bash  habana-shell.c  nvidia-shell.c  sonar-amd.c  sonar-amd.h  sonar-fakegpu.c  sonar-fakegpu.h  sonar-habana.c  sonar-habana.h  sonar-nvidia.c  sonar-nvidia.h  sonar-xpu.c  sonar-xpu.h  strtcpy.h  xpu-shell.c
runner/: .gitignore  Makefile  proto.c  proto.h  runner.c  subproc.c
sonar/: __init__.py  cli.py  command.py  main.py  map.py  ps.py  snap.py  snapshot.py  summary.py  version.py  web.py
src/: amd.rs  amd_smi.rs  batchless.rs  cluster.rs  command.rs  daemon.rs  datasink.rs  directorysink.rs  gpu.rs  gpuapi.rs  gpuset.rs  hostname.rs  interrupt.rs  jobs.rs  jobsapi.rs  json_tags.rs  kafka.rs  log.rs  main.rs  mockfs.rs  mockgpu.rs  mockjobs.rs  mocksystem.rs  nodelist.rs  nvidia.rs  nvidia_nvml.rs  output.rs  output_test.rs  pidmap.rs  process.rs  procfs.rs  procfsapi.rs  ps.rs  ps_newfmt.rs  ps_oldfmt.rs  ps_test.rs  rdkafka.rs  read_field.rs  realgpu.rs  realprocfs.rs  (+12 more)
tests/: .gitignore  Makefile  README.md  amd-gpu.sh  cluster-no-sinfo.sh  cluster-syntax.sh  command-line.sh  daemon-directory.ini  daemon-directory.sh  daemon-hostname.sh  daemon-http-no-curl.sh  daemon-http.sh  daemon-interrupt.ini  daemon-interrupt.sh  daemon-kafka.ini  daemon-kafka.sh  daemon-local.cfg  daemon-read-config.sh  daemon-rollup.sh  daemon-rollup2.c  daemon-rollup2.sh  daemon-slurm.sh  daemon-startup.sh  daemon-test.ini  daemon.sh  docker-run.sh  exclude-commands.sh  exclude-system-jobs.go  exclude-system-jobs.sh  exclude-users.sh  features.sh  go-doc-generate.sh  go-format.sh  gpuinfo.sh  habana-gpu.sh  hostname.sh  interrupt.sh  load.sh  lockfile.sh  logging.sh  (+33 more)
util/: Makefile  README.md
web/: data_visualisation.html  sonar.js
(+227 files in other folders)
