[package]
name = "sonar"
version = "0.16.0-rc1"
edition = "2021"
repository = "https://github.com/NordicHPC/sonar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nvidia = []
amd = []
xpu = []
habana = []
daemon = []
kafka = [ "dep:rdkafka" ]
default = [ "nvidia", "amd", "xpu", "habana", "daemon", "kafka" ]

[dependencies]
cty = "0.2.2"
once_cell = "1.21.3"
libc = "0.2"
subprocess = "0.2.9"
rdkafka = { version = "0.38.0", optional = true, default-features = false, features = ["ssl"] }
crossbeam = "0.8.4"
signal-hook = "0.3.18"
base64 = "0.22.1"
