[package]
name = "sonar"
version = "0.19.0-devel"
edition = "2021"
repository = "https://github.com/NordicHPC/sonar"

# We want this for building RPMs reliably with older rpmbuild (as on Saga) since it can't deal with
# the default level of debug information in Rust release builds (ie none).
[profile.release-with-debug]
inherits = "release"
debug = 1

[features]
nvidia = []
amd = []
xpu = []
habana = []
fakegpu = [] # for testing
daemon = []
kafka = [ "dep:rdkafka", "daemon" ]
http = [ "daemon" ]
default = [ "nvidia", "amd", "xpu", "habana", "daemon", "kafka", "http" ]

[dependencies]
cty = "0.2.2"
once_cell = "1.21.3"
libc = "0.2"
subprocess = "0.2.9"
rdkafka = { version = "0.39.0", optional = true, default-features = false, features = ["ssl"] }
crossbeam = "0.8.4"
signal-hook = "0.4.4"
base64 = "0.22.1"
simple_logger = { version = "5.1.0", default-features = false, features = [ "stderr", "timestamps" ] }
log = "0.4.28"
syslog = "7.0.0"
tempfile = { version = "3.27.0", default-features = false }
